--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "velocity(vm) to any other templates.",
   "main": "index.js",
   "scripts": {
-    "test": "make test-all"
+    "test": "mocha -R spec -t 5000 test/*.test.js",
+    "test-cov": "node --harmony node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -t 5000 test/*.test.js",
+    "test-travis": "node --harmony node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- -t 5000 test/*.test.js",
+    "jshint": "jshint .",
+    "autod": "autod -w --prefix '~' && npm run cnpm",
+    "cnpm": "npm install --registry=https://registry.npm.taobao.org",
+    "contributors": "contributors -f plain -o AUTHORS"
   },
   "config": {
     "cov": {
