--- a/package.json
+++ b/package.json
@@ -3,31 +3,23 @@
   "version": "1.1.1",
   "description": "velocity(vm) to any other templates.",
   "main": "index.js",
+  "files": [
+    "index.js",
+    "lib"
+  ],
   "scripts": {
     "test": "mocha -R spec -t 5000 test/*.test.js",
     "test-cov": "node --harmony node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -t 5000 test/*.test.js",
-    "test-travis": "node --harmony node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- -t 5000 test/*.test.js",
-    "jshint": "jshint .",
-    "autod": "autod -w --prefix '~' && npm run cnpm",
-    "cnpm": "npm install --registry=https://registry.npm.taobao.org",
-    "contributors": "contributors -f plain -o AUTHORS"
-  },
-  "config": {
-    "cov": {
-      "threshold": 95
-    }
+    "jshint": "jshint ."
   },
   "dependencies": {
-    "velocity": "~0.7.0"
+    "velocity": "~0.7.2"
   },
   "devDependencies": {
-    "autod": "*",
-    "contributors": "*",
-    "cov": "*",
-    "istanbul-harmony": "*",
+    "istanbul": "*",
     "jshint": "*",
     "mocha": "*",
-    "should": "~4.1.0"
+    "should": "7"
   },
   "homepage": "https://github.com/node-modules/vmto",
   "repository": {
@@ -40,12 +32,14 @@
     "email": "fengmk2@gmail.com"
   },
   "keywords": [
-    "vmto", "velocity", "vm",
+    "vmto",
+    "velocity",
+    "vm",
     "nunjucks"
   ],
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "fengmk2 <fengmk2@gmail.com> (http://fengmk2.github.com)",
+  "author": "fengmk2 <fengmk2@gmail.com> (http://fengmk2.com)",
   "license": "MIT"
 }
