--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lib"
   ],
   "scripts": {
-    "test": "mocha -R spec -t 5000 test/*.test.js",
-    "test-cov": "node --harmony node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -t 5000 test/*.test.js",
+    "test": "npm run jshint && mocha -R spec -t 5000 test/*.test.js",
+    "test-cov": "npm run jshint && node --harmony node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -t 5000 test/*.test.js",
     "jshint": "jshint ."
   },
   "dependencies": {
